# mod_docx

./: README.md  mod_docx2.py  pyproject.toml
.github/workflows/: release.yml  workflow_dispatch.yml
src/: mod_docx.py
src/mod_docx2/: mod_docx2.py
tests/: run_program.py  test_document.docx  test_document_out.docx
tests/blog_post_j27m06a23/: Traduise_document.ipynb  create_Azure_resources.sh  create_GCP_resources.sh  test_complicated_document.docx  test_document_out_Azure.docx  test_document_out_GCP.docx
