[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modify_docx_package"
version = "0.0.1"
authors = [
  { name="Jamilah Foucher", email="j622amilah@gmail.com" },
]
description = "The purpose of this library is to serve as a reliable and simple library to reassemble docx documents after they have been treated using AI/machine learning text treatment."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DevopsPractice7/modify_docx_package"
"Bug Tracker" = "https://github.com/DevopsPractice7/modify_docx_package/issues"
